--- a/AiDiDesign/AiDiDesign.Web/Views/Shared/_Layout.cshtml
+++ b/AiDiDesign/AiDiDesign.Web/Views/Shared/_Layout.cshtml
@@ -1,44 +1,205 @@
-﻿<!DOCTYPE html>
-<html>
+﻿@*<!DOCTYPE html>
+    <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>@ViewBag.Title - My ASP.NET Application</title>
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/modernizr")
+
+    </head>
+    <body>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
+            </div>
+        </div>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            </footer>
+        </div>
+
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
+    </body>
+    </html>*@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>@ViewBag.Title - AiDi Design</title>
+
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/bootstrap.css")
+    @Styles.Render("~/Content/Other/main.css")
+    @*@Styles.Render("~/Content/Other/font-awesome/css/font-awesome.css")*@
     @Scripts.Render("~/bundles/modernizr")
+    @*@Scripts.Render("~/Scripts/Other/main.js")
+        @Scripts.Render("~/Scripts/jquery-1.10.2.min.js")*@
 
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("AiDi Design", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("For us", "About", "Home")</li>
+                    <li>@Html.ActionLink("News", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Promo", "Contact", "Home")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Galery <b class="caret"></b></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-item.html">Single Portfolio Item</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <img src="~/images/1.jpg" class="centered" height="300" width="100%" />
+
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
                 @Html.Partial("_LoginPartial")
             </div>
+            <!-- /.navbar-collapse -->
         </div>
-    </div>
+        <!-- /.container -->
+    </nav>
+    <aside>
+        <div id="navbar" class="navbar navbar-inverse">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle Navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="navbar-brand" href="/home" title="Home" rel="home">
+                    <h3 class="site-title">AiDi Design</h3>
+                </a>
+            </div>
+            <<!-- Let's clear the float so the menu drops below the header -->
+            <div class="clearfix"></div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav nav-stacked" id="menu-bar">
+                    <!-- Notice the "nav-stacked" class we added here -->
+                    <li><a href="#">All</a></li>
+                    <li><a href="/sofas">Sofas</a></li>
+                    <li class="panel dropdown">
+                        <!-- We add the panel class to workaround collapsing menu items in Bootstrap -->
+                        <a data-toggle="collapse" data-parent="#menu-bar" href="#collapseOne">
+                            Sofas
+                        </a>
+                        <ul id="collapseOne" class="panel-collapse collapse">
+                            <!-- Notice the ID of this element must match the href attribute in the <a> element above it. Also we have added the panel-collapse class -->
+                            <li><a href="#">Living room</a></li>
+                            <li><a href="#">Kitchen</a></li>
+                            <li><a href="#">Dining room</a></li>
+                        </ul>
+                    </li>
+                    <li class="panel dropdown">
+                        <a data-toggle="collapse" data-parent="#menu-bar" href="#collapseTwo">
+                            Collapsible Item 2
+                        </a>
+                        <ul id="collapseTwo" class="panel-collapse collapse">
+                            <li><a href="#">Item 2-1</a></li>
+                            <li><a href="#">Item 2-2</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Art</a></li>
+                    <li><a href="#">Children</a></li>
+                </ul>
+            </div>
+            <!-- That's it for the menu bar -->
+            <!-- The next section is would be your content section -->
+            <!-- But first we must clear the float -->
+            <div class="clearfix"></div>
+            <div class="content">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h5>AiDi Design</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </aside>
     <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
 
+        @RenderBody()
+        <hr>
+
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; AiDi Design 2014</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
+
 </html>
