--- a/AiDiDesign/AiDiDesign.Web/Views/Home/Contact.cshtml
+++ b/AiDiDesign/AiDiDesign.Web/Views/Home/Contact.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model string
+
+@{
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>@Model</h3>
 
 <address>
     One Microsoft Way<br />
