--- a/AiDiDesign/AiDiDesign.Web/Content/Other/main.css
+++ b/AiDiDesign/AiDiDesign.Web/Content/Other/main.css
@@ -1,4 +1,12 @@
 aside{
-    width: 200px;
+    width: 20%;
+    display: inline-block;
+    margin: 5px;
+    padding: 10px;
     float: left;
+}
+
+div.container.body-content{
+    width: 75%;
+    display: inline-block;
 }
