--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model AiDiDesign.Web.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
