--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Account/ForgotPassword.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.ForgotPasswordViewModel
+﻿@model AiDiDesign.Web.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
