--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Account/ResetPassword.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.ResetPasswordViewModel
+﻿@model AiDiDesign.Web.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
