--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Account/SendCode.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.SendCodeViewModel
+﻿@model AiDiDesign.Web.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
