--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Account/VerifyCode.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.VerifyCodeViewModel
+﻿@model AiDiDesign.Web.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
