--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.AddPhoneNumberViewModel
+﻿@model AiDiDesign.Web.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
