--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/ChangePassword.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.ChangePasswordViewModel
+﻿@model AiDiDesign.Web.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
