--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/Index.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.IndexViewModel
+﻿@model AiDiDesign.Web.ViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
