--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/ManageLogins.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.ManageLoginsViewModel
+﻿@model AiDiDesign.Web.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
