--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/SetPassword.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.SetPasswordViewModel
+﻿@model AiDiDesign.Web.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
