--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.VerifyPhoneNumberViewModel
+﻿@model AiDiDesign.Web.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
