--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Account/Register.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model AiDiDesign.Web.Models.RegisterViewModel
+﻿@model AiDiDesign.Web.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
