--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Shared/_Layout.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Shared/_Layout.cshtml
@@ -3,39 +3,97 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - AiDi Design</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
 
 </head>
 <body>
-    <div class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+    <header class="container">
+        <div class="page-header" id="banner">
+            <div class="row">
+                <div class="col-lg-12 col-md-127 col-sm-12">
+                    <h1>AiDi Design</h1>
+                    <p class="lead">Best prices and wide variety of furnitures</p>
+                </div>
             </div>
         </div>
+        <div class="clearfix"></div>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("For us", "About", "Home", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("News", "Display", "News", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("Promo", "Promo", "Gallery", new { area = "" }, null)</li>
+
+                        <li class="dropdown">
+                            <!-- We add the panel class to workaround collapsing menu items in Bootstrap -->
+                            <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("All", "All", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Sofas", "All", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Chairs", "All", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Children", "All", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Art", "All", "Gallery", new { area = "" }, null)</li>
+                            </ul>
+                        </li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, null)</li>
+                        @if (User.IsInRole(AiDiDesign.Common.GlobalConstants.AdminRole))
+                        {
+                            <li class="dropdown">
+                                <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li>@Html.ActionLink("Products", "Index", "Products", new { area = "Administration" }, null)</li>
+                                    <li>@Html.ActionLink("Categories", "Index", "Categories", new { area = "Administration" }, null)</li>
+                                    <li>@Html.ActionLink("Users", "Index", "Users", new { area = "Administration" }, null)</li>
+                                </ul>
+                            </li>
+                        }
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
+            </div>
+        </nav>
+        <div class="navbar navbar-right">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <form class="navbar-form navbar-left" role="search">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Search">
+                                </div>
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </form>
+                        </li>
+                        <li> @Html.ActionLink("Basket", "Index", "Basket", new { area = "User" }, new { @class = "btn btn-warning", @role = "button", @id="basket" })</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div id="content-container" class="container">
+        <div class="row">
+
+            <section class="container body-content col-lg-12">
+                @RenderBody()
+            </section>
+        </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    <footer class="container text-center">
+        <p class="btn btn-link">&copy; @DateTime.Now.Year - <a href="http://traykov.eu">traykov.eu</a></p>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
