--- a/AiDiDesign/Web/AiDiDesign.Web/Content/Site.css
+++ b/AiDiDesign/Web/AiDiDesign.Web/Content/Site.css
@@ -21,6 +21,11 @@
     }
 }
 
+.nopadding {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 #basket {
     padding: 0.7em 4em;
     margin: 0.6em;
