Gallery page finished
- Index, Create, Edit, Delete, Details are working correct
- Gallery link in navigation bar is fixed, but still is not the right
data (need to fix it with real types first)

--- a/AiDiDesign/Web/AiDiDesign.Web/Views/Shared/_Layout.cshtml
+++ b/AiDiDesign/Web/AiDiDesign.Web/Views/Shared/_Layout.cshtml
@@ -41,11 +41,11 @@
                             <!-- We add the panel class to workaround collapsing menu items in Bootstrap -->
                             <a aria-expanded="false" href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("All", "All", "Gallery", new { area = "" }, null)</li>
-                                <li>@Html.ActionLink("Sofas", "All", "Gallery", new { area = "" }, null)</li>
-                                <li>@Html.ActionLink("Chairs", "All", "Gallery", new { area = "" }, null)</li>
-                                <li>@Html.ActionLink("Children", "All", "Gallery", new { area = "" }, null)</li>
-                                <li>@Html.ActionLink("Art", "All", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("All", "Index", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Sofas", "Index", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Chairs", "Index", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Children", "Index", "Gallery", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("Art", "Index", "Gallery", new { area = "" }, null)</li>
                             </ul>
                         </li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, null)</li>
